Added the tagtraum ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # for storing spotify credential info
 secrets.py
 
+#Can be downloaded from: https://www.tagtraum.com/msd_genre_datasets.html
+msd_tagtraum_cd2c.cls
+
 # ignore anything in pycache
 *.pyc
